# ssh-licco

./: .dockerignore  .gitignore  CHANGES_SUMMARY.md  CLEANUP_SUMMARY.md  CONFIG_CONFLICT_DIAGNOSIS.md  CONFIG_GUIDE.md  CONFIG_MANAGEMENT_GUIDE.md  CONNECTION_PRIORITY_MODES.md  CONNECTION_TEST_REPORT.md  DOCKER_MCP_TIMEOUT.md  DOCKER_MIRROR_SETUP.md  DOCKER_OPTIMIZATION.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.example  GIT_WORKFLOW_SUMMARY.md  INSTALL_SUCCESS.md  LAUNCHGUIDE.md  MANAGEMENT_GUIDE_SUMMARY.md  MARKETPLACE_SUBMISSION_COMPLETE.md  MARKETPLACE_SUBMIT_GUIDE.md  MARKET_SEARCH_STATUS.md  MCP_MARKETPLACE_MANAGEMENT_GUIDE.md  MCP_PUBLISH_GUIDE.md  MCP_REGISTRY_STATUS.md  MCP_SETUP_GUIDE.md  PASSWORD_SECURITY.md  PROJECT_COMPLETE.md  PUBLISH_SUCCESS.md  PUBLISH_SUMMARY.md  QUICK_REFERENCE_CARD.md  README.md  RELEASE_GUIDE.md  RELEASE_SUMMARY.md  SECURITY_FIXES.md  SECURITY_GUIDE.md  SECURITY_IMPROVEMENT_PLAN.md  TEST_REPORT.md  TEST_REPORT_v0.5.0.md  TOOL_DIAGNOSE_REPORT.md  (+22 more)
.github/workflows/: cleanup-temp-files.yml  mcp-registry.yml  pypi.yml  (+1 more)
config/: README.md  client_config.json  hosts.json  hosts.json.example  mcp.presets.json  mcp.user.config.json.example  mcp.user.config.template  ssh-hosts.example.json  ssh-hosts.json
docs/: API_REFERENCE.md  CHANGELOG.md  CLIENT_TYPES.md  CONTRIBUTING.md
scripts/: publish_mcp_registry.py
ssh_mcp/: __init__.py  audit_logger.py  batch_executor.py  config_manager.py  connection_config.py  connection_pool.py  exceptions.py  key_manager.py  logging_config.py  security.py  server.py  service.py  session_manager.py
(+12 files in other folders)
